@@ -39,6 +39,12 @@ glibc (2.2.92-1) unstable; urgency=low
 
      - debian/rules: Add time/date stamps to beginning and end of log files
 
+  * GOTO Masanori <gotom@debian.or.jp>
+     - debian/packages.d/libc-dbg.mk: update libpthread-0.9 -> 0.10.
+     - packages.d/libc.mk: likewise.
+     - packages.d/optimized.mk: likewise.
+     - packages.d/sparc64.mk: likewise.
+
  -- Jeff Bailey <jbailey@nisa.net>  Fri, 30 Aug 2002 17:27:04 -0400
 
 glibc (2.2.5-15) unstable; urgency=low
